Made changes to the API docs for us to try testing to ensure our routes work
